[gd_scene load_steps=4 format=3 uid="uid://cecxcel4d8ujc"]

[ext_resource type="Texture2D" uid="uid://bqhayn784hy5h" path="res://art/itens/mochilaAberta_2.png" id="1_j8nii"]
[ext_resource type="Script" path="res://backpack.gd" id="1_kqkql"]
[ext_resource type="Texture2D" uid="uid://cr8odhim8pwpy" path="res://art/itens/mochilaFechada_2.png" id="2_mke4m"]

[node name="Backpack" type="Area2D"]
script = ExtResource("1_kqkql")

[node name="MochilaAberta" type="Sprite2D" parent="."]
visible = false
position = Vector2(365, 745)
texture = ExtResource("1_j8nii")

[node name="CollisionMochA" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(276, 601, 240, 725, 465, 723, 466, 602)

[node name="MochilaFechada" type="Sprite2D" parent="."]
position = Vector2(363, 808)
texture = ExtResource("2_mke4m")

[node name="CollisionMochF" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(296, 972, 490, 896, 407, 682, 224, 724)

[connection signal="input_event" from="." to="." method="_on_input_event"]
